[package]
name = "turbocommit"
version = "0.11.1"
edition = "2021"
authors = ["Sett"]
description = "A CLI tool to create commit messages with gpt-3.5-turbo"
readme = "README.md"
keywords = ["chatgpt", "commit", "commit_message", "cli", "command-line"]
repository = "https://github.com/Sett17/turboCommit"
homepage = "https://github.com/Sett17/turboCommit"
documentation = "https://github.com/Sett17/turboCommit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
colored = "2.0.0"
crates_io_api = "0.8.1"
crossterm = "0.26.1"
edit = "0.1.4"
futures = "0.3.27"
git2 = "0.16.1"
home = "0.5.4"
inquire = "0.6.0"
reqwest = { version = "0.11.14", features = ["stream"] }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.19"
terminal-supports-emoji = "0.1.3"
tiktoken-rs = "0.2.2"
tokio = { version = "1.26.0", features = ["full"] }
unicode-segmentation = "1.10.1"
